--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ script:
   - hexo generate # generate static files
 deploy:
   provider: pages
-  skip-cleanup: true
   github-token: $GH_TOKEN
-  keep-history: true
   on:
-    branch: master
+    branches:    
+      only:      
+        - master 
   local-dir: public
