--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -187,9 +187,9 @@ profile:
   avatar: images/avatar.jpg
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
   author: Formyown
-  author_title: 全栈开发，目前就职于 北京捷天科技有限责任公司
-  author_description: 我是个好人
-  location: Sydney, Australia
+  author_title: 全栈开发工程师
+  author_description: 目前就职于北京捷天科技有限责任公司
+  location: Sydney, Australia<br/>北京，中国
   follow: https://github.com/formyown
   # Social Links
   social:
