--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -32,7 +32,7 @@ site:
     height: 40
     url: ../images/logo.png
   title: Formyown的小站 # 页面title
-  favicon: /favicon.png
+  favicon: ../images/logo.png
   board: <p></p> # 站点公告
   copyright: true # 底部版权信息
 
